2012-01-23  Andrew Okin  <razorblades13@gmail.com>

	* MultiMC.sln: 
