@@ -1,5 +1,10 @@
 2012-01-26  Andrew Okin  <razorblades13@gmail.com>
 
+	* Task.cs: Renamed the ProcessThread property to TaskThread to
+	  make it less confusing.
+
+2012-01-26  Andrew Okin  <razorblades13@gmail.com>
+
 	* MultiMC.ico: Added the icon (MonoDevelop apparently decided
 	  it didn't like my icon and didn't add it to git...)
 
