@@ -1,3 +1,8 @@
+2012-01-26  Andrew Okin  <razorblades13@gmail.com>
+
+	* MultiMC.sln: Made some minor code formatting and commit
+	  message style changes.
+
 2012-01-23  Andrew Okin  <razorblades13@gmail.com>
 
 	* MultiMC.sln: 
